all updated digitalocean token

--- a/.github/workflows/deploy-client.yaml
+++ b/.github/workflows/deploy-client.yaml
@@ -20,6 +20,6 @@ jobs:
       - run: docker push jamieyue/client
       - uses: digitalocean/action-doctl@v2
         with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          token: ${{ secrets.DIGITALOCEANSECRET }}
       - run: doctl kubernetes cluster kubeconfig save microservice-ticketing
       - run: kubectl rollout restart deployment client-depl
