--- a/.github/workflows/deploy-orders.yaml
+++ b/.github/workflows/deploy-orders.yaml
@@ -20,6 +20,6 @@ jobs:
       - run: docker push jamieyue/orders
       - uses: digitalocean/action-doctl@v2
         with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
+          token: ${{ secrets.DIGITALOCEANSECRET }}
       - run: doctl kubernetes cluster kubeconfig save microservice-ticketing
       - run: kubectl rollout restart deployment orders-depl
