--- a/infra/k8s-prod/ingress-srv.yaml
+++ b/infra/k8s-prod/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: 'true'
 spec:
   rules:
-    - host: 'www.jamieyue-microservice-ticketing.site'
+    - host: www.jamieyue-microservice-ticketing.site
       http:
         paths:
           - path: /api/users/?(.*)
